--- a/camera/camera_capture/templates/index.html
+++ b/camera/camera_capture/templates/index.html
@@ -6,13 +6,12 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/models/camera.css') }}" type="text/css">
 
-  <link rel="icon" type="image/png" href="{{url_for('static', filename='images/icon.png')}}" sizes="32x32" />
+  <link rel="icon" type="image/png" href="{{url_for('static', filename='images/ai_icon.png')}}" sizes="32x32" />
   <title>Camara Streaming</title>
 </head>
 <body>
 <header>
-  <div><img src="{{url_for('static', filename='images/icon.png')}}" width="32px"></div>
-  Camara Streaming
+  <img src="{{url_for('static', filename='images/hc_computer_vision.png')}}" width="32px">
 </header>
 <main>
   <div class=row>
